--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -79,6 +79,19 @@ b, strong {
 
 /* NAVBAR*/
 /*
+.navbar-default {
+background: rgba(0,0,0,1);
+background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,1)), color-stop(100%, rgba(255,255,255,0)));
+background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
+background: -o-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
+background: -ms-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
+background: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#ffffff', GradientType=0 );
+}
+#myCarousel_1469701223895 {
+  margin-top: -109px
+}
 */
 .navbar-default .navbar-nav>li>a {
     padding-top: 80px !important;
@@ -118,6 +131,25 @@ b, strong {
 #top_menu > li.active > a {
     color: #00a8c6;
 }
+
+/*DROPDOWN MENU BEGIN */
+.dropdown-menu {
+    background-color: rgba(0, 0, 0, 0.75);
+}
+.dropdown-menu>li>a {
+    /*color: white;*/
+}
+.dropdown-menu>li>a:hover {
+    background-color: rgba(128, 128, 128, 0.25);
+    background-image: none;
+    color: white;
+
+}
+.dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus {
+    background-color: rgba(128, 128, 128, 0.25);
+    background-image: none;
+}
+/*Dropdown menu END */
 
 /* jquery-validate control-icons (green arrow or red cross) */
 #wsd_checkout_form .form-control-feedback {
@@ -194,12 +226,19 @@ footer {
     color: white !important;
 }
 
+footer a {
+    color: #0f921a;
+}
+footer a:hover, a:focus {
+    color: white;
+}
+
 footer > div.container.mt16.mb8 > div.text-muted {
   color: #0f921a;
 }
 
 main .container {
-    max-width: 900px;
+    max-width: 1170px;
     margin: auto;
     display: block !important;
 }
@@ -227,3 +266,6 @@ header a.navbar-brand img {
 #top_menu > li:nth-child(1) > a {
     display: none;
     }
+#top_menu > li.active > a {
+    color: #55ab26;
+}
