--- a/addons/bird_config/views/snippet_options.xml
+++ b/addons/bird_config/views/snippet_options.xml
@@ -18,6 +18,7 @@
                         <li data-value='oe_orange'><a>Orange</a></li>
                         <li data-value='oe_brown_ligth'><a>Purple</a></li>
                         <li data-value='oe_brown'><a>Braun</a></li>
+                        <li data-value='oe_black_light'><a>Schwarz Transparent</a></li>
                     </ul>
                 </li>
                 <li class="dropdown-submenu">
