[ADD] adding, new banner snippet, adding snippet option for banner move-into-header, and responsive classes hidden mobile and tablet

--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -79,21 +79,38 @@ b, strong {
 }
 
 /* NAVBAR*/
-/*
+
 .navbar-default {
 background: rgba(0,0,0,1);
-background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
-background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,1)), color-stop(100%, rgba(255,255,255,0)));
-background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
-background: -o-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
-background: -ms-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
-background: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#ffffff', GradientType=0 );
+background: -moz-linear-gradient(top, rgba(0,0,0,1) 48%, rgba(0,0,0,1) 59%, rgba(0,0,0,0) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(48%, rgba(0,0,0,1)), color-stop(59%, rgba(0,0,0,1)), color-stop(100%, rgba(0,0,0,0)));
+background: -webkit-linear-gradient(top, rgba(0,0,0,1) 48%, rgba(0,0,0,1) 59%, rgba(0,0,0,0) 100%);
+background: -o-linear-gradient(top, rgba(0,0,0,1) 48%, rgba(0,0,0,1) 59%, rgba(0,0,0,0) 100%);
+background: -ms-linear-gradient(top, rgba(0,0,0,1) 48%, rgba(0,0,0,1) 59%, rgba(0,0,0,0) 100%);
+background: linear-gradient(to bottom, rgba(0,0,0,1) 48%, rgba(0,0,0,1) 59%, rgba(0,0,0,0) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=0 );
+    border-bottom: 0px;
 }
-#myCarousel_1469701223895 {
-  margin-top: -109px
+/*
+.navbar-default {
+    z-index:9999;
+    background-image: url("../img/BG.png");
+        background-size: cover;
+    clear: both;
+    width: 100%;
+    margin: 0;
+}*/
+header {
+    background-color: black;
 }
-*/
+
+.move-into-header {
+  margin-top: -70px !important;
+}
+myCarousel_1469701223895 {
+      margin-top: -70px !important;
+}
+
 .navbar-default .navbar-nav>li>a {
     padding-top: 80px !important;
     padding-bottom: 5px !important;
