--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -107,10 +107,14 @@ header {
 .move-into-header {
   margin-top: -70px !important;
 }
+
 myCarousel_1469701223895 {
       margin-top: -70px !important;
 }
-
+#website_sale_donate.parallax {
+    margin-top: -70px;
+    padding-top: 70px;
+}
 .navbar-default .navbar-nav>li>a {
     padding-top: 80px !important;
     padding-bottom: 5px !important;
@@ -123,7 +127,10 @@ myCarousel_1469701223895 {
     margin-top: 80px !important;
 
 }
-
+.navbar-default .navbar-nav>.active>a {
+    background-image: none !important;
+    background-color: rgba(0, 0, 0, 0) !important;
+}
 /* Nav-Tabs */
 
 .nav_tabs>li {
