--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -82,12 +82,12 @@ b, strong {
 
 .navbar-default {
 background: rgba(0,0,0,1);
+background: linear-gradient(to bottom, rgba(0,0,0,1) 48%, rgba(0,0,0,1) 59%, rgba(0,0,0,0) 100%);
 background: -moz-linear-gradient(top, rgba(0,0,0,1) 48%, rgba(0,0,0,1) 59%, rgba(0,0,0,0) 100%);
 background: -webkit-gradient(left top, left bottom, color-stop(48%, rgba(0,0,0,1)), color-stop(59%, rgba(0,0,0,1)), color-stop(100%, rgba(0,0,0,0)));
 background: -webkit-linear-gradient(top, rgba(0,0,0,1) 48%, rgba(0,0,0,1) 59%, rgba(0,0,0,0) 100%);
 background: -o-linear-gradient(top, rgba(0,0,0,1) 48%, rgba(0,0,0,1) 59%, rgba(0,0,0,0) 100%);
 background: -ms-linear-gradient(top, rgba(0,0,0,1) 48%, rgba(0,0,0,1) 59%, rgba(0,0,0,0) 100%);
-background: linear-gradient(to bottom, rgba(0,0,0,1) 48%, rgba(0,0,0,1) 59%, rgba(0,0,0,0) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=0 );
     border-bottom: 0px;
 }
@@ -105,7 +105,9 @@ header {
 }
 
 .move-into-header {
-  margin-top: -70px !important;
+  position: relative;
+  top: -70px;
+  /*margin-top: -70px !important;*/
 }
 
 myCarousel_1469701223895 {
@@ -304,3 +306,7 @@ header a.navbar-brand img {
     mix-blend-mode: overlay lighten;
 }
 */
+/* BLOG CSS */
+#main_column > div:nth-child(n) > div > div.col-md-9 > span > img {
+    display: none;
+}
