--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -59,7 +59,7 @@ auf die Größe des Iframes und nicht auf die darüberliegende Seitengröße.
 
 body {
     color: black;
-    font-family: "MuseoSans-100",Helvetica,Arial,sans-serif;
+    font-family: "/fonts/MuseoSans-100",Helvetica,Arial,sans-serif;
 }
 /* BACKGROUND SNIPPED COLORS */
 .oe_blue { background-color: #036ba2 !important; }
