--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -5,7 +5,7 @@
 /* FONT TESTS */
 @font-face {
 font-family: MuseoSans-100;
-src: url("/fonts/MuseoSans_100.otf") format("opentype");
+src: url("fonts/MuseoSans_100.otf") format("opentype");
 }
 
 main .container {
