--- a/addons/bird_config/static/src/css/bird_custom_fonts.css
+++ b/addons/bird_config/static/src/css/bird_custom_fonts.css
@@ -1,7 +1,7 @@
 /* FONT TESTS */
 @font-face {
     font-family: Museo100-Italic;
-    src: url("fonts/Museo100-italic.otf") format("opentype");
+    src: url("fonts/Museo100-Italic.otf") format("opentype");
 }
 @font-face {
     font-family: Museo100-Regular;
@@ -42,7 +42,7 @@
 
 @font-face {
     font-family: MuseoSans;
-    src: url("fonts/MuseoSans100-italic.otf") format("opentype");
+    src: url("fonts/MuseoSans100-Italic.otf") format("opentype");
     font-weight: normal;
     font-style: italic;
 }
@@ -91,7 +91,7 @@
 
 @font-face {
     font-family: MuseoSansCnd100-Italic;
-    src: url("fonts/MuseoSansCnd100-italic.otf") format("opentype");
+    src: url("fonts/MuseoSansCnd100-Italic.otf") format("opentype");
 }
 @font-face {
     font-family: MuseoSansCnd100-Regular;
