--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -171,8 +171,8 @@ header {
 
 .move-into-header {
   position: relative;
-  top: -70px;
-  /*margin-top: -70px !important;*/
+  /*top: -70px;*/
+  margin-top: -70px !important;
 }
 
 myCarousel_1469701223895 {
