--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -448,3 +448,8 @@ address.mb0 {
         height: auto !important;
     }
 }
+@media only screen and (min-device-width: 768px) {
+    section div.container div.row div.col-md-6.mt16 {
+        display: grid;
+    }
+}
