[ADD] adding template for Viveum and its CSS devided to stay PCI conform, viveum_template.html is loaded from VIVEUM directly this is only the source copy of the file

--- a/addons/bird_config/static/src/html/viveum.css
+++ b/addons/bird_config/static/src/html/viveum.css
@@ -401,10 +401,10 @@
         display: block;
         width: 50%;
         color: #333;
-        background-color: #ffcc01;
+        background-color: #00669e;
         margin: 0 auto 40px;
         text-align: center;
-        background: #ffcc01;
+        background: #00669e;
         padding-top: 13px;
         padding-bottom: 13px;
       }
