--- a/addons/bird_config/static/src/html/viveum.css
+++ b/addons/bird_config/static/src/html/viveum.css
@@ -400,7 +400,7 @@
       #header {
         display: block;
         width: 50%;
-        color: #333;
+        color: #fff !important;
         background-color: #00669e;
         margin: 0 auto 40px;
         text-align: center;
