[ADD] adding css style for new Special banner

--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -176,7 +176,9 @@ header {
   /*top: -70px;*/
   margin-top: -70px !important;
 }
-
+myCarousel_1495089974912 {
+    margin-top: -70px !important;
+}
 myCarousel_1469701223895 {
       margin-top: -70px !important;
 }
