[fix] use ID of Banner

--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -176,10 +176,10 @@ header {
   /*top: -70px;*/
   margin-top: -70px !important;
 }
-myCarousel_1495089974912 {
+#myCarousel_1495089974912 {
     margin-top: -70px !important;
 }
-myCarousel_1469701223895 {
+#myCarousel_1469701223895 {
       margin-top: -70px !important;
 }
 #website_sale_donate.parallax {
