--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -80,6 +80,10 @@ body {
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-weight: bold;
 }
+.oe_website_sale h1 {
+    margin-top: 25px !important;
+    margin-bottom: 12.5px !important;
+}
 #product_desc_short_top h1 {
     margin-top: 25px;
     margin-bottom: 12.5px;
@@ -515,6 +519,6 @@ body[data-catid="2"] .ppt_opc #wsd_checkout_form > div > h3 > span {
   display: none;
 }
 body[data-catid="2"] .ppt_opc #wsd_checkout_form > div > h3:after {
-  content: 'Beitragshöhe';
+  content: 'Jährliche Beitragshöhe';
     font-size: 35px;
 }
